# praca-inzynierska

./: .gitignore  Dyplom — kopia.tex  Dyplom.tex  dokumentacja.bib  rozdzial04.tex  rozdzial05.tex  state-diagram.txt  streszczenie.tex  temat.md  todo.md  todo.txt  zoomcall-tematy.md
cambalanche_project/: piperchat.cmb  shortcuts.ui  window.ui
client/: index.html  package-lock.json  package.json
client/src/: main.ts
gtk-guis/: window.cmb  window.ui
piperchat/: Cargo.toml  build.rs  todo.md
piperchat/cambalanche_project/: piperchat.ui
piperchat/resources/piperchat/: contacts_row.ui  resources.gresource.xml  shortcuts.ui  window.ui
piperchat/src/: app.rs  lib.rs  main.rs  message.rs  piperchat.rs  session.rs  task_object.rs  task_row.rs  utils.rs  window.rs
piperchat/src/custom_button/: imp.rs
piperchat/src/gui/: contact_object.rs  window.rs
piperchat/src/gui/window/: imp.rs
piperchat/src/piperchat/: app.rs  gui.rs  message.rs  window.rs
piperchat/src/piperchat/gui/: contact_object.rs  window.rs
piperchat/src/piperchat/gui/contact_object/: imp.rs
piperchat/src/piperchat/gui/window/: imp.rs
piperchat/src/piperchat/window/: imp.rs
piperchat/src/task_object/: imp.rs
piperchat/src/task_row/: imp.rs
piperchat/src/todo_app/: custom_button.rs  task_object.rs  task_row.rs  utils.rs  window.rs
piperchat/src/todo_app/task_object/: imp.rs
piperchat/src/todo_app/task_row/: imp.rs
piperchat/src/todo_app/window/: imp.rs
piperchat/src/window/: imp.rs
thesis/: Dyplom.tex  analiza_wymagan.tex  aplikacja_webowa.tex  dokumentacja.bib  implementacja.tex  koncepcja_realizacji.tex  podsumowanie.tex  rozdzial01.tex  rozdzial02.tex  rozdzial03.tex  rozdzial04.tex  skroty.tex  streszczenie.tex  technologie.tex  temat.md  wstep.tex  zagadnienia_teoretyczne.tex
thesis/img/implementacja/: client_data_flow.drawio  server_data_flow.drawio
