[package]
name = "piperchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.2.1", package = "libadwaita" }
futures-util = "0.3.25"
gst = { version = "0.19.1", package = "gstreamer" }
gst-video = { version = "0.19.0", package = "gstreamer-video" }
gtk = { version = "0.5.1", package = "gtk4" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
tokio = { version = "1.23.0", features = ["full"] }
tokio-tungstenite = "0.18.0"

[build-dependencies]
glib-build-tools = "0.16.3"
